fix: 그리드 카드 이미지 wrap 추가 + 하트 아이콘 우측 하단 정렬 (701-6555,6565,6576)

--- a/css/lighting-category.css
+++ b/css/lighting-category.css
@@ -358,7 +358,7 @@ body {
 
 .lc-grid-img {
   width: 100%;
-  height: 160px;
+  height: 100%;
   object-fit: cover;
   display: block;
   border: 1px solid rgba(148,148,148,0.11);
@@ -376,10 +376,10 @@ body {
 
 .lc-grid-heart {
   position: absolute;
-  bottom: 5px;
-  left: 5px;
-  width: 24px;
-  height: 24px;
+  bottom: 4px;
+  right: 4px;
+  width: 21px;
+  height: 19px;
   object-fit: contain;
 }
 
